# opengl-playground

./: .gitignore  .gitmodules  CMakeLists.txt
configuration/: Directories.h.in  RootDir.h.in
resources/objects/car/: car.mtl
resources/shaders/: hello-shader.frag  hello-shader.vert  hello-texture.frag  hello-transformations.vert  model-loading.frag  model-loading.vert
src/: CMakeLists.txt
src/1-basics/1-hello-window/: main.cpp
src/1-basics/2-hello-triangle/: OpenGLContext.cpp  OpenGLContext.h  Window.cpp  main.cpp
src/1-basics/3-shader/: OpenGLContext.cpp  OpenGLContext.h  Window.cpp  Window.h  main.cpp
src/1-basics/4-hello-rectangle/: main.cpp
src/1-basics/5-textures/: main.cpp
src/1-basics/6-transformations/: main.cpp
src/1-basics/7-camera/: main.cpp
src/core/: core.h  shared.h
src/core/buffer/: BufferLayout.cpp  BufferLayout.h  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/core/camera/: Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/core/components/: TransformComponent.h
src/core/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vertex.h
src/core/opengl/: OpenGLAPI.cpp  OpenGLAPI.h  OpenGLContext.cpp  OpenGLContext.h
src/core/shader/: Shader.cpp  Shader.h  ShaderType.cpp  ShaderType.h
src/core/texture/: Texture.cpp  Texture.h
src/core/window/: Window.cpp  Window.h
src/practices/1-hello-window/: main.cpp
src/practices/2-hello-triangle/: main.cpp
src/practices/3-shader/: main.cpp
src/practices/4-hello-rectangle/: main.cpp
src/practices/5-textures/: main.cpp
src/practices/6-transformations/: main.cpp
src/practices/7-camera/: main.cpp
src/practices/8-model-loading/: main.cpp
src/practices/9-lighting/: main.cpp
src/shared/: BufferLayout.cpp  BufferLayout.h  EBO.cpp  EBO.h  OpenGLContext.cpp  Shader.cpp  Shader.h  ShaderType.cpp  ShaderType.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h  core.h  shared.h
src/shared/buffer/: BufferLayout.cpp  BufferLayout.h  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/shared/camera/: Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/shared/components/: TransformComponent.h
src/shared/gl/: OpenGLContext.cpp
src/shared/include/buffer/: BufferLayout.h  VAO.h
src/shared/include/gl/: OpenGLContext.h
src/shared/include/shader/: Shader.h
src/shared/opengl/: OpenGLAPI.cpp  OpenGLAPI.h  OpenGLContext.cpp  OpenGLContext.h
src/shared/shader/: Shader.cpp  Shader.h  ShaderType.cpp  ShaderType.h
src/shared/src/: BufferLayout.cpp  EBO.cpp  ShaderType.cpp  VAO.cpp  VBO.cpp  Window.cpp
src/shared/texture/: Texture.cpp  Texture.h
src/shared/window/: Window.cpp  Window.h
